eks_llm_sample/app/tgi-engine/config/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: tgi-engine # Service名称
  namespace: tgi
  labels:
    app: tgi-engine    # Service自身标签
spec:
  ports:
  - port: 8080  # K8S集群内部访问Service时使用的端口
    protocol: TCP
    targetPort: 8080  # 目标Pod的监听端口
    name: api
  selector:
    app: tgi-engine
