eks_llm_sample/app/tgi-engine/config/kong-route-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-route-tgi-engine
  namespace: tgi
  annotations:
    konghq.com/strip-path: 'true'
spec:
  ingressClassName: kong
  rules:
  - host: tgi-engine-kong.yugaozh-flow.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: tgi-engine
            port:
              number: 8080
