eks_llm_sample/app/tgi-engine/config/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tgi-engine
  namespace: tgi
spec:
  hosts:
  - tgi-engine.yugaozh-flow.com
  gateways:
  - gateway-tgi-engine
  http:
  - route:
    - destination:
        host: tgi-engine
        port:
          number: 8080
        subset: llama2-13b-chat-awq
      weight: 90
    - destination:
        host: tgi-engine
        port:
          number: 8080
        subset: mistral-7b
      weight: 10
